--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.4.2",
     "@next/bundle-analyzer": "^14.2.5",
+    "bcrypt": "^5.1.1",
+    "drizzle-orm": "^0.33.0",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.2.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.24.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.41",
