--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.2",
+    "@headlessui/react": "^2.1.2",
     "@next/bundle-analyzer": "^14.2.5",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
