--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "postgres": "^3.4.4",
